# solidity_hacking_agent

./: .gitignore  MultiOwnable.sol  README.md  main.py  pyproject.toml  security_report.json
solidtyhackingagents/: README.md  pyproject.toml
solidtyhackingagents/src/solidtyhackingagents/: crew.py  main.py  manager_llm.py
solidtyhackingagents/src/solidtyhackingagents/config/: agents.yaml  tasks.yaml
solidtyhackingagents/src/solidtyhackingagents/models/llama3/: model.py
solidtyhackingagents/src/solidtyhackingagents/models/trend_prediction/: vulnerability_forecasting_model.py
solidtyhackingagents/src/solidtyhackingagents/tools/: hacktool.py  manager_llm.py
solidtyhackingagents/src/solidtyhackingagents/tools/agent_functions/: assign_task.py  attack_manager.py  audit_agent.py  behavioral_analysis_agent.py  compliance_check_agent.py  configure_crew.py  define_agent.py  exploit_generator_agent.py  incident_response_agent.py  knowledge_update_agent.py  patch_management_agent.py  rapid_deployment_agent.py  risk_assessment_agent.py  security_training_agent.py  threat_intelligence_agent.py  vulnerability_scanner_agent.py  white_hat_agent.py
solidtyhackingagents/src/solidtyhackingagents/tools/agent_training/: agent_training.py  real_world_data_ingestion.py
solidtyhackingagents/src/solidtyhackingagents/tools/attack_methods/: adversarial_attacks.py  consensus_attack.py  cross_site_scripting_attack.py  cryptographic_attack.py  ddos_attack.py  delegatecall_attack.py  denial_of_service_attack.py  integer_underflow_attack.py  race_condition_attack.py  spirent_import.py  (+3 more)
(+121 files in other folders)
